Typos and simplified Javadoc.